--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -5,7 +5,7 @@ android:layout_height="match_parent"
 tools:context=".MainActivity" >
 	<LinearLayout
 		android:id="@+id/topbar"
-		android:layout_width="match_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
 
@@ -18,31 +18,31 @@ tools:context=".MainActivity" >
 
 		<Button 
 			android:id="@+id/hintbuttona"
-			android:layout_height="50dp"
-			android:layout_width="50dp"
-			android:layout_marginLeft="10dp"
+			android:layout_height="wrap_content"
+			android:layout_width="70dp"
+			android:layout_marginLeft="3dp"
 			android:layout_marginTop="5dp"
-			android:text="1"/>
+			android:text="Phrase"/>
 		<Button 
 			android:id="@+id/hintbuttonb"
-			android:layout_height="50dp"
-			android:layout_width="50dp"
-			android:layout_marginLeft="10dp"
+			android:layout_height="wrap_content"
+			android:layout_width="65dp"
+			android:layout_marginLeft="3dp"
 			android:layout_marginTop="5dp"
-			android:text="2"/>
+			android:text="Rhyme"/>
 		<Button 
 			android:id="@+id/hintbuttonc"
-			android:layout_height="50dp"
-			android:layout_width="50dp"
-			android:layout_marginLeft="10dp"
+			android:layout_height="wrap_content"
+			android:layout_width="65dp"
+			android:layout_marginLeft="3dp"
 			android:layout_marginTop="5dp"
-			android:text="3"/>
+			android:text="Word"/>
 
 		<TextView 
 			android:id="@+id/scoretext"
 			android:layout_height="50dp"
 			android:layout_width="wrap_content"
-			android:layout_marginLeft="20dp"
+			android:layout_marginLeft="5dp"
 			android:textSize="20dp" 
 			android:text="Score:"/>
 		
@@ -58,8 +58,8 @@ tools:context=".MainActivity" >
 
 	<ImageView
 		android:id="@+id/image"
-		android:layout_width="250dp"
-		android:layout_height="250dp"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true"
 		android:layout_centerVertical="true"/>
 
