--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -3,47 +3,60 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".MainActivity" >
+	tools:context=".MainActivity" >
 	<LinearLayout
 		android:id="@+id/topbar"
-		android:layout_width="wrap_content"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
+	
 		android:orientation="horizontal">
 
 		<TextView
-			android:id="@+id/hinttext"
-			android:layout_height="50dp"
-			android:layout_width="wrap_content"
-			android:layout_marginTop="5dp"
-			android:text="Hint:" />
+		    android:id="@+id/hinttext"
+		    android:layout_width="wrap_content"
+		    android:layout_height="50dp"
+		    android:layout_marginTop="5dp"
+		    android:layout_weight="1"
+		    android:textSize="30dp" 
+		    android:text="Hint:" />
 
-		<Button 
-			android:id="@+id/hintbuttona"
-			android:layout_height="wrap_content"
-			android:layout_width="70dp"
-			android:layout_marginLeft="3dp"
-			android:layout_marginTop="5dp"
-			android:text="Phrase"/>
-		<Button 
-			android:id="@+id/hintbuttonb"
-			android:layout_height="wrap_content"
-			android:layout_width="70dp"
-			android:layout_marginLeft="3dp"
-			android:layout_marginTop="5dp"
-			android:text="Rhyme"/>
-		<Button 
-			android:id="@+id/hintbuttonc"
-			android:layout_height="wrap_content"
-			android:layout_width="65dp"
-			android:layout_marginLeft="3dp"
-			android:layout_marginTop="5dp"
-			android:text="Word"/>
+		<Button
+		    android:id="@+id/hintbuttona"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="3dp"
+		    android:layout_marginTop="5dp"
+		    android:layout_weight="3"
+		    android:textSize="25dp" 
+		    android:text="Phrase" />
+
+		<Button
+		    android:id="@+id/hintbuttonb"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="3dp"
+		    android:layout_marginTop="5dp"
+		    android:textSize="25dp" 
+		    android:layout_weight="3"
+		    android:text="Rhyme" />
+		
+		<Button
+		    android:id="@+id/hintbuttonc"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="3dp"
+		    android:layout_marginTop="5dp"
+		    android:textSize="25dp"	
+		    android:layout_weight="3"
+		    android:text="Word" />
 
 		<TextView 
 			android:id="@+id/scoretext"
 			android:layout_height="50dp"
 			android:layout_width="wrap_content"
+			android:layout_weight="1"
 			android:layout_marginLeft="5dp"
-			android:textSize="20dp" 
+			android:textSize="25dp" 
 			android:text="Score:"/>
 		
 		<TextView
@@ -51,7 +64,8 @@ tools:context=".MainActivity" >
 			android:layout_height="50dp"
 			android:layout_width="wrap_content"
 			android:layout_marginLeft="5dp"
-			android:textSize="20dp"			
+			android:textSize="25dp"		
+			android:layout_weight="1"	
 			android:text="0"/>
 			
 	</LinearLayout>
@@ -60,6 +74,7 @@ tools:context=".MainActivity" >
 		android:id="@+id/image"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:scaleType="fitXY"
 		android:layout_centerHorizontal="true"
 		android:layout_centerVertical="true"/>
 
@@ -67,20 +82,30 @@ tools:context=".MainActivity" >
 		android:id="@+id/bottombar"
 		android:layout_alignParentBottom="true"
 		android:layout_width="fill_parent"
-		android:layout_height="50dp">
+		android:layout_height="75dp">
+		
+		<Button 
+	        android:id="@+id/feedbackbutton"
+	        android:layout_alignParentLeft="true"
+	        android:layout_width="150dp"
+	        android:layout_height="100dp"
+	        android:textSize="25dp" 
+	        android:text="Feedback"/>
 	    
 	    <Button 
 	        android:id="@+id/micbutton"
 	        android:layout_centerInParent="true"
 	        android:background="@drawable/mic"
-	        android:layout_width="50dp"
-	        android:layout_height="50dp"/>
+	        android:layout_width="75dp"
+	        android:textSize="25dp" 
+	        android:layout_height="125dp"/>
 	   
 	   	<Button 
 	        android:id="@+id/skipbutton"
 	        android:layout_alignParentRight="true"
-	        android:layout_width="50dp"
-	        android:layout_height="50dp"
+	        android:layout_width="100dp"
+	        android:textSize="25dp" 
+	        android:layout_height="100dp"
 	        android:text="Skip"/>
 	    
 	</RelativeLayout>
