--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -74,7 +74,8 @@ tools:context=".MainActivity" >
 		android:id="@+id/image"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:scaleType="fitXY"
+		android:adjustViewBounds="true"
+		android:cropToPadding="true"
 		android:layout_centerHorizontal="true"
 		android:layout_centerVertical="true"/>
 
