--- a/MossTalkWords/res/layout/activity_end.xml
+++ b/MossTalkWords/res/layout/activity_end.xml
@@ -1,72 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#04346C">
+    android:background="#65A6D1"
+    tools:context=".EndSet" >
 
     <LinearLayout
         android:id="@+id/topbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:gravity="center"
         android:orientation="vertical" >
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:gravity="center"
             android:text="Set Complete!"
-            android:textSize="25sp" 
-            android:textColor="#FF9C00"/>
-        
+            android:textSize="22sp" />
+
         <TextView
             android:id="@+id/endset_set"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:gravity="center"
             android:text="Living Things Easy"
-            android:textSize="22sp" 
-            android:textColor="#FF9C00"/>
-        
-        <TextView
-            android:id="@+id/endset_setscore"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:id="@+id/topbar"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Set Score: "
-            android:textSize="20sp" 
-            android:textColor="#FFB540"/>
-        
-        <TextView
-            android:id="@+id/endset_highscore"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="High Score: "
-            android:textSize="20sp" 
-            android:textColor="#FFB540"/>
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/endset_setscore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Set Score: "
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/endset_highscore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="High Score: "
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/endset_totalscore"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
             android:text="Total Score: "
-            android:layout_marginTop="10dp"
-            android:textSize="20sp" 
-            android:textColor="#FFB540"/>
-        
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/endset_streak"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Longest Streak: "
-            android:textSize="20sp" 
-            android:textColor="#FFB540"/>
-        
-		<Button
+            android:textSize="20sp" />
+
+        <Button
             android:id="@+id/endset_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
+            android:gravity="center"
             android:onClick="onEndButtonClick"
             android:text="Finish" />
     </LinearLayout>
