--- a/MossTalkWords/res/layout/activity_pick.xml
+++ b/MossTalkWords/res/layout/activity_pick.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#333333"
     tools:context=".PickSet" >
 
     <LinearLayout
@@ -15,39 +16,22 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/welcome"
-            android:textSize="25sp" />
+            android:textSize="25sp" 
+            android:background="#333333"
+            android:textColor="#EBC06A"
+            android:gravity="center" 
+            android:textStyle="bold|italic"/>
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Please select from the categories below"
-            android:textSize="15sp" />
 
-        <Spinner
-            android:id="@+id/set_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:prompt="@string/cat" />
-
-        <Spinner
-            android:id="@+id/difficulty_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:prompt="@string/diff" />
+        <ListView
+        android:id="@+id/listView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#333333"
+        android:divider="@android:color/transparent"
+  		android:dividerHeight="20dp"/>
         
-		<Button
-            android:id="@+id/start_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:onClick="onStartButtonClick"
-            android:text="Start!" />
+		
     </LinearLayout>
 
 </RelativeLayout>
