--- a/MossTalkWords/res/layout/activity_end.xml
+++ b/MossTalkWords/res/layout/activity_end.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#65A6D1"
+    android:background="#333333"
     tools:context=".EndSet" >
 
     <LinearLayout
@@ -20,6 +20,7 @@
             android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="Set Complete!"
+            android:textColor="#EBC06A"
             android:textSize="20sp" />
 
         <TextView
@@ -29,6 +30,7 @@
             android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="Living Things Easy"
+            android:textColor="#EBC06A"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -44,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Set Score: "
+                android:textColor="#FFFFFF"
                 android:textSize="20sp" />
 
             <TextView
@@ -52,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="High Score: "
+                android:textColor="#FFFFFF"
                 android:textSize="20sp" />
         </LinearLayout>
 
@@ -62,6 +66,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="Total Score: "
+            android:textColor="#FFFFFF"
             android:textSize="20sp" />
 
         <TextView
@@ -70,6 +75,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Longest Streak: "
+            android:textColor="#FFFFFF"
             android:textSize="20sp" />
 
         <Button
