--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -2,13 +2,13 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+android:background="#333333"
 tools:context=".MainActivity" >
 
 	<LinearLayout
 		android:id="@+id/topbar"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-	
 		android:orientation="horizontal">
 
 		<TextView
@@ -18,6 +18,7 @@ tools:context=".MainActivity" >
 		    android:layout_marginTop="5dp"
 		    android:layout_weight="1"
 		    android:textSize="30dp" 
+		    android:textColor="#EBC06A"
 		    android:text="Hint:" />
 
 		<Button
@@ -57,6 +58,7 @@ tools:context=".MainActivity" >
 			android:layout_weight="1"
 			android:layout_marginLeft="5dp"
 			android:textSize="25dp" 
+			android:textColor="#EBC06A"
 			android:text="Score:"/>
 		
 		<TextView
@@ -66,6 +68,7 @@ tools:context=".MainActivity" >
 			android:layout_marginLeft="5dp"
 			android:textSize="25dp"		
 			android:layout_weight="1"	
+			android:textColor="#EBC06A"
 			android:text="0"/>
 			
 	</LinearLayout>
