updated colors of hint buttons and changed the mic button style to match

--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -94,15 +94,14 @@ tools:context=".MainActivity" >
 		android:id="@+id/bottombar"
 		android:layout_alignParentBottom="true"
 		android:layout_width="fill_parent"
-		android:layout_height="75dp">
+		android:layout_height="90dp">
 	    
 	    <Button 
 	        android:id="@+id/micbutton"
 	        android:layout_centerInParent="true"
-	        android:background="@drawable/mic"
-	        android:layout_width="75dp"
-	        android:textSize="25dp" 
-	        android:layout_height="125dp"/>
+	        android:drawableTop="@drawable/mic_clear"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"/>
 	   
 	   	<Button 
 	        android:id="@+id/skipbutton"
