--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -11,17 +11,6 @@ tools:context=".MainActivity" >
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
 
-		<TextView
-		    android:id="@+id/hinttext"
-		    android:layout_width="wrap_content"
-		    android:layout_height="50dp"
-		    android:layout_marginTop="5dp"
-		    android:layout_weight="1"
-		    android:layout_gravity="center_vertical"
-		    android:textSize="30dp" 
-		    android:textColor="#EBC06A"
-		    android:text="Hint:" />
-
 		<Button
 		    android:id="@+id/hintbuttona"
 		    android:layout_width="wrap_content"
@@ -54,29 +43,36 @@ tools:context=".MainActivity" >
 		    android:layout_weight="3"
 		    android:text="Word"
 		    android:drawableTop="@drawable/hint_word" />
-
-		<TextView 
-			android:id="@+id/scoretext"
-			android:layout_height="50dp"
-			android:layout_width="wrap_content"
-			android:layout_weight="1"
-			android:layout_marginLeft="5dp"
-			android:layout_gravity="center_vertical"
-			android:textSize="30dp" 
-			android:textColor="#EBC06A"
-			android:text="Score:"/>
 		
-		<TextView
-			android:id="@+id/score"
-			android:layout_height="50dp"
-			android:layout_width="wrap_content"
-			android:layout_marginLeft="5dp"
-			android:layout_gravity="center_vertical"
-			android:textSize="30dp"		
-			android:layout_weight="1"	
-			android:textColor="#EBC06A"
-			android:text="0"/>
-			
+		<LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/scoretext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="Score"
+                android:textColor="#EBC06A"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:text="0"
+                android:textColor="#EBC06A"
+                android:textSize="30dp" />
+            
+        </LinearLayout>
+		
 	</LinearLayout>
 
 	<ImageView
