--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -15,9 +15,9 @@ tools:context=".MainActivity" >
 		    android:id="@+id/hintbuttona"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="3dp"
-		    android:layout_marginTop="5dp"
-		    android:layout_weight="3"
+		    android:layout_marginLeft="15dp"
+		    android:layout_marginTop="15dp"
+		    android:layout_weight="2"
 		    android:textSize="25dp" 
 		    android:text="Phrase"
 		    android:drawableTop="@drawable/hint_phrase" />
@@ -26,10 +26,10 @@ tools:context=".MainActivity" >
 		    android:id="@+id/hintbuttonb"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="3dp"
-		    android:layout_marginTop="5dp"
+		    android:layout_marginLeft="25dp"
+		    android:layout_marginTop="15dp"
 		    android:textSize="25dp" 
-		    android:layout_weight="3"
+		    android:layout_weight="2"
 		    android:text="Rhyme"
 		    android:drawableTop="@drawable/hint_rhyme" />
 		
@@ -37,39 +37,40 @@ tools:context=".MainActivity" >
 		    android:id="@+id/hintbuttonc"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="3dp"
-		    android:layout_marginTop="5dp"
+		    android:layout_marginLeft="25dp"
+		    android:layout_marginTop="15dp"
 		    android:textSize="25dp"	
-		    android:layout_weight="3"
+		    android:layout_weight="2"
 		    android:text="Word"
 		    android:drawableTop="@drawable/hint_word" />
 		
 		<LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="2"
             android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/scoretext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"
                 android:text="Score"
                 android:textColor="#EBC06A"
-                android:textSize="30dp" />
+                android:textSize="40dp" />
 
             <TextView
                 android:id="@+id/score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
+                android:layout_marginTop="10dp"
                 android:text="0"
                 android:textColor="#EBC06A"
-                android:textSize="30dp" />
+                android:textSize="40dp" />
             
         </LinearLayout>
 		
