--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -91,17 +91,19 @@ tools:context=".MainActivity" >
 		android:id="@+id/bottombar"
 		android:layout_alignParentBottom="true"
 		android:layout_width="fill_parent"
-		android:layout_height="90dp">
+		android:layout_height="120dp">
 	    
 	    <Button 
 	        android:id="@+id/micbutton"
 	        android:layout_centerInParent="true"
-	        android:drawableTop="@drawable/mic_clear"
+	        android:background="@drawable/mic_clear"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"/>
 	   
 	   	<Button 
 	        android:id="@+id/skipbutton"
+	        android:layout_marginTop="15dp"
+	        android:layout_marginBottom="15dp"
 	        android:layout_alignParentRight="true"
 	        android:layout_width="100dp"
 	        android:textSize="20dp" 
