--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="#333333"
+android:background="@color/grey"
 tools:context=".MainActivity" >
         
 	<LinearLayout
@@ -59,7 +59,7 @@ tools:context=".MainActivity" >
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Score"
-                android:textColor="#EBC06A"
+                android:textColor="@color/yellow"
                 android:textSize="40dp" />
 
             <TextView
@@ -69,7 +69,7 @@ tools:context=".MainActivity" >
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:text="0"
-                android:textColor="#EBC06A"
+                android:textColor="@color/yellow"
                 android:textSize="40dp" />
             
         </LinearLayout>
