--- a/MossTalkWords/res/layout/activity_pick.xml
+++ b/MossTalkWords/res/layout/activity_pick.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333333"
+    android:background="@color/grey"
     tools:context=".PickSet" >
 
     <LinearLayout
@@ -17,8 +17,8 @@
             android:layout_height="wrap_content"
             android:text="@string/welcome"
             android:textSize="25sp" 
-            android:background="#333333"
-            android:textColor="#EBC06A"
+            android:background="@color/grey"
+            android:textColor="@color/yellow"
             android:gravity="center" 
             android:textStyle="bold|italic"/>
 
@@ -27,7 +27,7 @@
         android:id="@+id/listView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#333333"
+        android:background="@color/grey"
         android:divider="@android:color/transparent"
   		android:dividerHeight="20dp"/>
         
