--- a/MossTalkWords/res/layout/activity_help.xml
+++ b/MossTalkWords/res/layout/activity_help.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#333333"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,12 +17,13 @@
     
     <Button
 		    android:id="@+id/backbutton"
-		    android:layout_width="wrap_content"
-		    android:layout_height="5dp"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
 		    android:layout_marginLeft="3dp"
 		    android:layout_marginTop="5dp"
 		    android:layout_weight="3"
+		    android:layout_alignParentBottom="true"
 		    android:textSize="25dp" 
 		    android:text="Back" />
 
-</LinearLayout>
+</RelativeLayout>
