--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -106,6 +106,14 @@ tools:context=".MainActivity" >
 		android:layout_width="fill_parent"
 		android:layout_height="120dp">
 	    
+	    <Button 
+	        android:id="@+id/helpbutton"
+	        android:layout_alignParentLeft="true"
+	        android:text="Help"
+	        android:textSize="30dp"
+	        android:layout_marginTop="10dp"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"/>
 	  
 	    <Button 
 	        android:id="@+id/micbutton"
