Updated EndSet screen
Adds high score stamp if high score for the set is reached, also
animates counting down of set score while counting up total score

--- a/MossTalkWords/res/layout/activity_end.xml
+++ b/MossTalkWords/res/layout/activity_end.xml
@@ -8,83 +8,153 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_margin="15dp"
-        android:gravity="center"
         android:orientation="vertical" >
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Set Complete!"
             android:textColor="@color/yellow"
-            android:textSize="25sp" />
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/endset_set"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="40dp"
             android:gravity="center"
             android:text="Living Things Easy"
             android:textColor="@color/yellow"
-            android:textSize="28sp"
+            android:textSize="40sp"
             android:textStyle="bold" />
 
+        <!-- HIGH SCORE STAMP / HIGHSCORE + STREAK SECTION -->
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/endset_setscore"
+            <ImageView
+                android:id="@+id/endset_stamp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="Set Score: "
-                android:textColor="@color/white"
-                android:textSize="25sp" />
+                android:gravity="center_vertical" />
 
-            <TextView
-                android:id="@+id/endset_highscore"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:text="High Score: "
-                android:textColor="@color/white"
-                android:textSize="25sp" />
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/endset_streak"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Longest Streak: "
+                    android:textColor="@color/white"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/endset_highscore"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="High Score: "
+                    android:textColor="@color/white"
+                    android:textSize="30sp" />
+            </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/endset_totalscore"
+        
+        <!-- SCORE/TOTAL SECTION -->
+        
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:text="Total Score: "
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:layout_marginLeft="100dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginTop="40dp"
+            android:layout_weight="2"
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/endset_streak"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Longest Streak: "
-            android:textColor="@color/white"
-            android:textSize="25sp" />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal" >
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Set Score"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    android:textStyle="italic" />
+
+                <TextView
+                    android:id="@+id/endset_setscore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="50"
+                    android:textColor="@color/white"
+                    android:textSize="70sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/white" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Total Score"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    android:textStyle="italic" />
+
+                <TextView
+                    android:id="@+id/endset_totalscore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="150"
+                    android:textColor="@color/yellow"
+                    android:textSize="70sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
+
+        
         <Button
             android:id="@+id/endset_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:onClick="onEndButtonClick"
-            android:text="Finish" 
-            android:textSize="25sp"/>
+            android:layout_gravity="center"
+            android:drawableRight="@drawable/skip"
+            android:onClick="onEndButtonClick" />
+        
     </LinearLayout>
 
 </RelativeLayout>
