Made score change animation more prominent and also made help screen look better

--- a/MossTalkWords/res/layout/activity_main.xml
+++ b/MossTalkWords/res/layout/activity_main.xml
@@ -59,8 +59,8 @@ tools:context=".MainActivity" >
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Score"
-                android:textColor="@color/yellow"
-                android:textSize="40dp" />
+                android:textColor="@color/white"
+                android:textSize="35dp" />
 
             <TextView
                 android:id="@+id/score"
