--- a/MossTalkWords/res/layout/activity_help.xml
+++ b/MossTalkWords/res/layout/activity_help.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#333333"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="520dp"
     android:orientation="vertical" >
     
     <TextView
@@ -10,7 +10,6 @@
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_marginTop="5dp"
-		    android:layout_weight="1"
 		    android:textSize="20dp" 
 		    android:textColor="#EBC06A"
 		    android:text="" />
@@ -19,9 +18,7 @@
 		    android:id="@+id/backbutton"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="3dp"
 		    android:layout_marginTop="5dp"
-		    android:layout_weight="3"
 		    android:layout_alignParentBottom="true"
 		    android:textSize="25dp" 
 		    android:text="Back" />
