--- a/MossTalkWords/res/layout/listview_item.xml
+++ b/MossTalkWords/res/layout/listview_item.xml
@@ -55,12 +55,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:textStyle="bold"
         android:textSize="22dp"
         android:textColor="#FFFFFF"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_gravity="right" />
+        android:layout_marginBottom="5dp" 
+       android:layout_toLeftOf="@+id/lockedicon"/>
+      
+      <ImageView android:id="@+id/lockedicon"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:gravity="center_vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp" />
        
+      
 </RelativeLayout>
