--- a/MossTalkWords/res/layout/activity_end.xml
+++ b/MossTalkWords/res/layout/activity_end.xml
@@ -34,6 +34,7 @@
             android:textStyle="bold" />
 
         <!-- HIGH SCORE STAMP / HIGHSCORE + STREAK SECTION -->
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -74,15 +75,67 @@
             </LinearLayout>
         </LinearLayout>
 
+        <!-- STAR SECTION -->
+        
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginRight="150dp"
+            android:layout_marginTop="50dp"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/endset_star1"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:src="@drawable/emptystar" />
+
+                <ImageView
+                    android:id="@+id/endset_star2"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:src="@drawable/emptystar" />
+
+                <ImageView
+                    android:id="@+id/endset_star3"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:src="@drawable/emptystar" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/endset_correct_count"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="5/10 Correct"
+                android:textColor="@color/white"
+                android:textSize="30sp" />
+            
+        </LinearLayout>
+
         
         <!-- SCORE/TOTAL SECTION -->
-        
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="100dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="50dp"
             android:layout_weight="2"
             android:orientation="vertical" >
 
@@ -146,7 +199,6 @@
             </LinearLayout>
         </LinearLayout>
 
-        
         <Button
             android:id="@+id/endset_button"
             android:layout_width="wrap_content"
@@ -154,7 +206,6 @@
             android:layout_gravity="center"
             android:drawableRight="@drawable/skip"
             android:onClick="onEndButtonClick" />
-        
     </LinearLayout>
 
 </RelativeLayout>
