--- a/MossTalkWords/res/layout/activity_pick.xml
+++ b/MossTalkWords/res/layout/activity_pick.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent"
     android:background="@color/grey"
     tools:context=".PickSet" >
-
-    <LinearLayout
+   
+    <RelativeLayout
         android:id="@+id/topbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-
+		
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -24,14 +24,20 @@
 
 
         <ListView
-        android:id="@+id/listView1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@color/grey"
-        android:divider="@android:color/transparent"
-  		android:dividerHeight="20dp"/>
+	        android:id="@+id/listView1"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:background="@color/grey"
+	        android:divider="@android:color/transparent"
+	  		android:dividerHeight="20dp"/>
         
-		
-    </LinearLayout>
+        <Button
+		android:id="@+id/reportButton"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentBottom="true"
+		android:text="Send Report" /> 
+
+    </RelativeLayout>
 
 </RelativeLayout>
