--- a/MossTalkWords/res/layout/activity_help.xml
+++ b/MossTalkWords/res/layout/activity_help.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#333333"
     android:layout_width="match_parent"
-    android:layout_height="520dp"
+    android:layout_height="570dp"
     android:orientation="vertical" >
     
     <TextView
@@ -14,12 +14,21 @@
 		    android:textColor="#EBC06A"
 		    android:text="" />
     
+    <Button 
+        	android:id="@+id/ttsbutton"
+        	android:layout_width="match_parent"
+        	android:layout_height="wrap_content"
+        	android:layout_below="@id/helptext"
+        	android:layout_marginTop="5dp"
+        	android:textSize="25dp"
+        	android:text="Start Help Reader"/>
+    
     <Button
 		    android:id="@+id/backbutton"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_marginTop="5dp"
-		    android:layout_alignParentBottom="true"
+		    android:layout_below="@id/ttsbutton"
 		    android:textSize="25dp" 
 		    android:text="Back" />
 
