--- a/MossTalkWords/res/layout/activity_help.xml
+++ b/MossTalkWords/res/layout/activity_help.xml
@@ -21,7 +21,7 @@
         	android:layout_below="@id/helptext"
         	android:layout_marginTop="5dp"
         	android:textSize="25dp"
-        	android:text="Start Help Reader"/>
+        	android:text="Start Help Text-To-Speech"/>
     
     <Button
 		    android:id="@+id/backbutton"
